Fixing overflowing header

--- a/_scss/_shame.scss
+++ b/_scss/_shame.scss
@@ -53,6 +53,7 @@ body {
 // Header
 .header {
   margin: auto;
+  overflow: hidden;
 
   @include breakpoint($beta) {
     height: 185px;
